# Lung-segmentation-and-3D-Reconstruction

./: AboutDlg.cpp  AboutDlg.h  C2DSegDlg.cpp  C2DSegDlg.h  C2DThreePlaneDlg.cpp  C2DThreePlaneDlg.h  CMakeLists.txt  CTMCPropertyDlg.cpp  CTMCPropertyDlg.h  CTRCPropertyDlg.cpp  CTRCPropertyDlg.h  Global.h  ITK+VTK+MFC_GUI.APS  ITK+VTK+MFC_GUI.cpp  ITK+VTK+MFC_GUI.h  ITK+VTK+MFC_GUI.rc  ITK+VTK+MFC_GUIDlg.cpp  ITK+VTK+MFC_GUIDlg.h  LungPETCTSeriesSegDlg.cpp  LungPETCTSeriesSegDlg.h  Macro.h  README.md  ReadMe.txt  VolumeDataViewDlg.cpp  VolumeDataViewDlg.h  resource.h  stdafx.cpp
